tests/errors/003-typechecking/002-undeclared-identifier/003-reference-to-another-scope.xxx
x := () => {
  a := "inner scope"
}

y := a
